--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
     },
     "autoload": {
         "psr-4": {
-            "GetPoP\\PostMeta\\": "src"
+            "PoP\\PostMeta\\": "src"
         },
         "files": [
             "initialize.php"
@@ -35,7 +35,7 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "GetPoP\\PostMeta\\": "tests"
+            "PoP\\PostMeta\\": "tests"
         }
     },
     "scripts": {
