Added dependency on meta

--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
     "prefer-stable": true,
     "require": {
         "php" : "~7.1",
+        "getpop/meta": "dev-master",
         "getpop/migrate-postmeta": "^1.0@dev"
     },
     "require-dev": {
