--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
         "php" : "~7.1",
         "getpop/meta": "~0.1",
         "getpop/posts": "~0.1",
-        "getpop/migrate-postmeta": "dev-master"
+        "getpop/migrate-postmeta": "~0.1"
     },
     "require-dev": {
         "phpstan/phpstan": "^0.12",
