--- a/composer.json
+++ b/composer.json
@@ -19,9 +19,9 @@
     "prefer-stable": true,
     "require": {
         "php" : "~7.1",
-        "getpop/meta": "~0.1",
-        "getpop/posts": "~0.1",
-        "getpop/migrate-postmeta": "~0.1"
+        "getpop/meta": "dev-master",
+        "getpop/posts": "dev-master",
+        "getpop/migrate-postmeta": "dev-master"
     },
     "require-dev": {
         "phpstan/phpstan": "^0.12",
