Changed repo owner

--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
         "PoP",
         "postmeta"
     ],
-    "homepage": "https://github.com/getpop/postmeta",
+    "homepage": "https://github.com/PoPSchema/postmeta",
     "license": "MIT",
     "authors": [
         {
