--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,9 @@
         "squizlabs/php_codesniffer": "^3.0"
     },
     "autoload": {
+        "psr-4": {
+            "PoP\\PostMeta\\": "src"
+        },
         "files": [
             "initialize.php"
         ]
