--- a/composer.json
+++ b/composer.json
@@ -18,14 +18,15 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "require": {
-        "php": "~7.2",
+        "php": "~7.4",
         "pop-schema/meta": "dev-master",
         "pop-schema/customposts": "dev-master",
         "pop-schema/migrate-custompostmeta": "dev-master"
     },
     "require-dev": {
         "phpstan/phpstan": "^0.12",
-        "phpunit/phpunit": ">=8.5",
+        "phpunit/phpunit": ">=9.3",
+        "rector/rector": "dev-master#59547a5cbe7845c2ca493ede481e1141e53df079",
         "squizlabs/php_codesniffer": "^3.0"
     },
     "autoload": {
@@ -42,7 +43,8 @@
         "test": "phpunit",
         "check-style": "phpcs src tests",
         "fix-style": "phpcbf src tests",
-        "analyse": "phpstan analyse -c phpstan.neon.dist"
+        "analyse": "phpstan analyse -c phpstan.neon.dist",
+        "downgrade-code": "rector process --dry-run"
     },
     "extra": {
         "branch-alias": {
