--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "require": {
-        "php": "~7.4",
+        "php": "^7.4|^8.0",
         "pop-schema/meta": "dev-master",
         "pop-schema/customposts": "dev-master",
         "pop-schema/migrate-custompostmeta": "dev-master"
