--- a/composer.json
+++ b/composer.json
@@ -2,10 +2,7 @@
     "name": "pop-schema/custompostmeta",
     "type": "library",
     "description": "Adds support for post meta",
-    "keywords": [
-        "PoP",
-        "custompostmeta"
-    ],
+    "keywords": ["PoP", "custompostmeta"],
     "homepage": "https://github.com/PoPSchema/custompostmeta",
     "license": "MIT",
     "authors": [
@@ -26,7 +23,7 @@
     "require-dev": {
         "phpstan/phpstan": "^0.12",
         "phpunit/phpunit": ">=9.3",
-        "rector/rector": "^0.8.17",
+        "rector/rector": "^0.9",
         "squizlabs/php_codesniffer": "^3.0"
     },
     "autoload": {
@@ -44,7 +41,7 @@
         "check-style": "phpcs src tests",
         "fix-style": "phpcbf src tests",
         "analyse": "phpstan analyse -c phpstan.neon.dist",
-        "downgrade-code": "rector process --dry-run --ansi"
+        "preview-code-downgrade": "rector process --dry-run --ansi"
     },
     "extra": {
         "branch-alias": {
