--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "pop-cms-schema/custompostmeta",
     "type": "library",
     "description": "Adds support for post meta",
-    "keywords": ["GraphQL", "PHP", "Gato", "GatoGraphQL", "custompostmeta"],
+    "keywords": ["Gato", "GraphQL", "PHP", "Gato", "GatoGraphQL", "custompostmeta"],
     "homepage": "https://github.com/PoPCMSSchema/custompostmeta",
     "license": "GPL-2.0-or-later",
     "authors": [
